add support draggable on ios

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="style.css" rel="stylesheet">
   <script src="jquery.js"></script>
   <script src="jquery-ui.js"></script>
+  <script src="jquery.ui.touch-punch.js"></script>
 </head>
 <body style="background: #ccc;">
 
